Fix display profile loading on macOS

macOS doesn't have proper display EDID information, so we have to
properly implement and use the legacy version of it.

BUG:474503